--- a/src/sweep.yaml
+++ b/src/sweep.yaml
@@ -1,11 +1,9 @@
-project: gng-ode-hyperparameters
+project: gng-ode-solvers
 program: scripts/main_niser_ode.py
 method: grid
 
 parameters:
-  embedding-dim:
-    values: [64, 128, 256, 512]
-  num-layers:
-    values: [1, 2, 3, 4, 5]
+  solver:
+    values: ["euler", "rk4", "implicit_adams"]
   dataset-dir:
     values: ["../datasets/gowalla", "../datasets/tmall", "../datasets/nowplaying"]
